Refactor/domain content (#90)
* feat: add TODO for cascading hard-delete of playlist contents in PlaylistService

* test: add unit tests for PlaylistQueryRepositoryImpl methods

* refactor: format PlaylistQueryRepositoryImplTest for improved readability

* feat: implement EmailService for sending temporary passwords

* feat: add Redis implementation for TemporaryPasswordRepository

* feat: implement password reset functionality with temporary password generation and email notification

* feat: add TemporaryPasswordAuthenticationProvider for handling temporary password validation

* feat: implement password update functionality with validation and API integration

* feat: add unit tests for password update functionality and temporary password handling

* fix: suppress inspection warning for mailSender autowiring in EmailService

* feat: rename PasswordResetRequest to ResetPasswordRequest and add ChangePasswordRequest for password change functionality

* feat: refactor JwtChannelInterceptor for improved readability and structure

* feat: integrate JwtRegistry for token revocation on user role updates and locking/unlocking

* feat: implement OAuth2 login with Google support and custom user service

* feat: update OAuth2 frontend redirect URI to use port 8080

* feat: update redirect URL in OAuth2SuccessHandler to include contents path

* feat: add unit tests for OAuth2FailureHandler and OAuth2SuccessHandler

* feat: simplify OAuth2FailureHandler by removing error message encoding and updating tests

* feat: add Kakao OAuth2 user info support and corresponding unit tests

* refactor: format code for better readability in KakaoOAuth2UserInfo and OAuth2FailureHandlerTest

* feat: add Kafka configuration and dependencies

* feat: add Docker Compose configuration for Kafka broker

* feat: implement Kafka configuration with producer and consumer factories, and define topics

* feat: add outbox event entity and repository for event sourcing

* feat: implement domain event str